2006-09-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/dataset/misc.xml: added a tux image set with our tux images
	* src/boards/python/anim.py: commented out svg export code
	* src/gcompris/file_selector.c: (item_event_file_selector),
	(parseMime): fixed segfault on mime type
	* src/gcompris/images_selector.c: (read_dataset_directory): minor, now allow simlynks

2006-09-25  Bruno coudoin  <bruno.coudoin@free.fr>

	- fixed missing config.h.mingw.in (that replaces config.h.mingw)
	- added support for python plugin compilation under mingw
	- improved wordprocessor activity. it no more crashes and allow
	  two styles, on for the layout, one for the color (on an idea
	  of my daughter Clara)
	- This activity could be moved out of --experimental now but
	  we are in string freeze.
	- Added a double switch in electricity. It is now possible to make
	  a 2 switches corridor like circuit (va et vient in french).
	- config.c : fixed a double memory free on locale that crashed GC at exit time.
	- file_selector.c: fixed mime type loading and display. now uses gettext instead of
	  inline xml translation.
	- menu.c: fixed a misplaced free that makes all board description in the database to be junk.

	* Makefile.mingw:
	* boards/gcompris/mimetypes/Makefile.am:
	* config.h.mingw.in:
	* src/boards/python/electric.py:
	* src/boards/wordprocessor.c: (wordprocessor_create),
	(display_style_buttons), (item_event), (create_tags),
	(set_default_style), (display_style_selector),
	(display_color_style_selector), (tag_style_set),
	(item_event_style_selection), (item_event_color_style_selection),
	(key_press_event):
	* src/gcompris/config.c: (gc_config_start), (gc_config_stop),
	(display_previous_next), (get_next_locale), (get_previous_locale),
	(item_event_ok):
	* src/gcompris/file_selector.c: (gc_selector_file_stop),
	(display_file_selector), (display_files), (item_event_directory),
	(item_event_scroll), (item_event_file_selector), (parseMime),