@@ -1,3 +1,9 @@
+2006-10-01  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/gcompris/cache.c: (_cache_init), (gc_cache_init),
+	(gc_cache_end), (gc_cache_clear), (gc_cache_get),
+	(gc_cache_insert): Do not compile it if network mode is not enabled
+
 2006-09-30  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/dataset/misc.xml: added a tux image set with our tux images
